# URLShorter

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.py  tests.ipynb
app/: celery.py  database.py  main.py  security.py  settings.py
app/api_services/: routers.py  utils.py
app/common/: shemas.py
app/exceptions/: user_exceptions.py
app/orm/: dao.py
app/services/: dependencies.py  mongo_db.py  redis_service.py
app/static/: 404.html  login.html  main.html  register.html
app/tasks/: tasks.py
app/url_short/: dao.py  models.py  routers.py  schemas.py  service.py
app/users/: dao.py  dependencies.py  models.py  routers.py  schemas.py  service.py
